--- a/README.Rmd
+++ b/README.Rmd
@@ -3,47 +3,80 @@ title: "長庚大學 大數據分析方法 作業六"
 output: github_document
 ---
 
-
-## 作業說明 （繳交時請直接刪除這個章節）
-
-作業目的：期末專題暖身
-
-依下列指示，完成期末分析專題作業規劃：
-
-- 訂出分析問題，並將R Markdown的一級標題(第一行的title:)中的"長庚大學 大數據分析方法 作業六"取代為期末專題的分析問題，並在分析議題背景前加上組員姓名 (`10pt`)
-- 分析議題背景 (`10pt`) 與動機 (`10pt`)
-- 資料說明 (`10pt`) 與 載入 (`10pt`)
-- 資料處理與清洗 (`10pt`) 說明 (`10pt`)
-- 對資料們進行探索式資料分析，圖文並茂佳!(`20pt`)
-- 期末專題分析規劃與假設 (`10pt`)
-
 ## 分析議題背景
-背景介紹背景介紹
+現今的社會，人們日趨繁忙，汲汲於賺錢生活，哪怕是多一分休息、自由的時間都變得格外重要，因此，能夠省去大量交通時間的高鐵就成了大眾快速往返南北的工具，而搭乘高鐵的性價比的高低，我們將由搭乘人數來做觀察。
 
 ## 分析動機
-分析動機分析動機
+高鐵會定期的更新車次以及班次，班次的多寡是否會影響乘客搭乘的人數。
+除了班次以外，票價也是會影響搭車的人數，因此我們希望得知價格的變化是否會影響乘客的數量。
+
 
 ## 使用資料
 說明使用資料們
+1.	高鐵運量統計表 來源：政府資料開放平台 資料類型：CSV 主要欄位：月份、發車數、客座公里（座公里）、準點率、旅客人數（人次） 日期：104年12月29日
+
+
 
 載入使用資料們
 ```{r}
-#這是R Code Chunk
+library(readr)
+library(dplyr)
+library(ggplot2) 
+THSRC_NUMBER_MOD <- read_csv("D:/課用/R/data/THSRC_NUMBER_MOD.csv", 
+    locale = locale())
 ```
 
 ## 資料處理與清洗
-說明處理資料的步驟
+將資料依據年份作整理，
+得出每一年的旅客人數、列車次數、準點率，
+再利用這些資料來做每一年度的平均，
+最後整理在同一張表中。
 
 處理資料
 ```{r}
-#這是R Code Chunk
+travelers_pop<-group_by(THSRC_NUMBER_MOD, .dots=年)%>%
+  summarise(Pop=sum(旅客人數))
+travelers_mean<-group_by(THSRC_NUMBER_MOD, .dots=年)%>%
+  summarise(meanPop=mean(旅客人數))
+
+shifts_sum<-group_by(THSRC_NUMBER_MOD, .dots=年)%>%
+  summarise(shift_num=sum(列車次數))
+shifts_mean<-group_by(THSRC_NUMBER_MOD, .dots=年)%>%
+  summarise(shift_mean=mean(列車次數))
+
+THSRC_NUMBER_MOD$誤點數<-round(THSRC_NUMBER_MOD$列車次數*
+                              (1-as.numeric(gsub("%","",THSRC_NUMBER_MOD$準點率))/100),0)
+delay_sum<-group_by(THSRC_NUMBER_MOD, .dots=年)%>%
+  summarise(num=sum(誤點數))
+delay_mean<-group_by(THSRC_NUMBER_MOD, .dots=年)%>%
+  summarise(num_mean=mean(誤點數))
+
+THSRC_NUMBER_NEW<-merge(travelers_pop,travelers_mean,by=".dots")
+THSRC_NUMBER_NEW$shift_sum<-shifts_sum$shift_num
+THSRC_NUMBER_NEW$shift_mean<-shifts_mean$shift_mean
+THSRC_NUMBER_NEW$delay_num<-delay_sum$num
 ```
 
 ## 探索式資料分析
-圖文並茂圖文並茂
+
 ```{r}
-#這是R Code Chunk
+qplot(旅客人數, 列車次數, 
+      data = THSRC_NUMBER_MOD,
+      color = 年,
+      geom = c("point", "smooth"))
+##旅客人數與列車次數的關係
+##起先由列車次數快速增加隨後旅客人數才有大幅的上升
+##我們可以發現剛開始列車增加人數成長快但是到了後期搭車人數成長緩慢
+
+
+knitr::kable(THSRC_NUMBER_MOD)
+##7,8月正值暑假相較前面兩三個月都會有暴增的現象
+##也多半是一年中的巔峰時期
+
 ```
 
 ## 期末專題分析規劃
-期末專題要做XXOOO交叉分析
+
+搭乘高鐵的人數越來越多，其中影響人們搭乘的原因有很多種，我們想透過分析來了解哪種原因對於高鐵搭乘人數影響最多。列車班次數、票價、開站數量、準點率這些都是可能對旅客人數的造成影響的原因。
+
+
