--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,8 @@
 ---
-title: "長庚大學 大數據分析方法 作業六"
+title: "高鐵搭乘人數探討"
 output: github_document
 ---
+組員：許家睿 蔡宇哲
 
 ## 分析議題背景
 現今的社會，人們日趨繁忙，汲汲於賺錢生活，哪怕是多一分休息、自由的時間都變得格外重要，因此，能夠省去大量交通時間的高鐵就成了大眾快速往返南北的工具，而搭乘高鐵的性價比的高低，我們將由搭乘人數來做觀察。
